--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
-    height: 100vh;
-    min-width: 600px;
-    background-image: linear-gradient(130deg, #FFFFFF,#1C3F80);
+    height: 85vh;
+    min-width: 450px;
+    background-image: linear-gradient(130deg, #03fcb1,#fc033d);
     background-repeat: no-repeat;
     background-size: auto;
 }
@@ -29,25 +29,25 @@ html {
 }
 
 form {
-    background-color: #FFFFFF;
+    background-color: #03fcb1;
     padding: 15px;
     border-radius: 5px;
     display: flex;
 }
 
 input[type="text"] {
-    height: 30px;
-    outline: 0;
+    height: 55px;
+    outline: 2;
     border: none;
     font-size: 1rem;
     font-family: 'Raleway', sans-serif;
-    color: #595959;
-    flex-grow: 1;
+    color: #03fc6fto;
+    flex-grow: 3;
 }
 
 button {
     font-size: 1.5rem;
-    background-color: #FFFFFF;
+    background-color: #03fcb1;
     outline: 0;
     border: none;
     color: #595959;
@@ -58,7 +58,7 @@ button:hover {
 }
 
 .todoList {
-    background-color: #FFFFFF;
+    background-color: #03fcb1;
     border-radius: 5px;
     margin-top: 20px;
     padding: 10px 25px;
@@ -91,7 +91,7 @@ i {
 .clearAll {
     display: flex;
     justify-content: flex-end;
-    padding: 10px 3px;
+    padding: 15px 5px;
     cursor: pointer;
     font-size: 0.9rem;
 }
